--- a/KontrolerKomunikacyjny/MainWindow.xaml
+++ b/KontrolerKomunikacyjny/MainWindow.xaml
@@ -33,7 +33,7 @@
         <Label Height="24" HorizontalAlignment="Left" Margin="300,131,0,0" Name="DaneLabel" VerticalAlignment="Top" Width="175" />
         <ComboBox Height="23" HorizontalAlignment="Left" Margin="138,50,0,0" Name="comboBox1" VerticalAlignment="Top" Width="120" ItemsSource="{Binding}"></ComboBox>
         <Label Content="WYBIERZ PORT" Height="28" HorizontalAlignment="Left" Margin="138,11,0,0" Name="label8" VerticalAlignment="Top" Width="155" />
-        <Label Content="DODAWANIE NOWEGO URZĄDZENIA" Height="28" HorizontalAlignment="Left" Margin="12,326,0,0" Name="label1" VerticalAlignment="Top" Width="198" />
+        <Label Content="OPCJE: " Height="28" HorizontalAlignment="Left" Margin="12,326,0,0" Name="label1" VerticalAlignment="Top" Width="198" />
         <Label Content="LISTA URZĄDZEŃ W SYSTEMIE" Height="28" HorizontalAlignment="Left" Margin="464,382,0,0" Name="label2" VerticalAlignment="Top" Width="209" />
         <Label Height="205" HorizontalAlignment="Left" Margin="464,416,0,0" Name="UrzadzeniaWSystemieLabel" VerticalAlignment="Top" Width="329" />
         <Label Content="LISTA PROTOTYPÓW URZĄDZEŃ" Height="28" HorizontalAlignment="Left" Margin="-9,127,0,0" Name="label9" VerticalAlignment="Top" Width="189" />
@@ -48,11 +48,11 @@
         <Label Content="Wpisz poprawną ilość wyjść (1-32)" Height="26" HorizontalAlignment="Left" Margin="228,491,0,0" Name="BladIloscWyjscLabel" VerticalAlignment="Top" Width="190" />
         <Button Content="Dodaj urządzenie do systemu" Height="33" HorizontalAlignment="Left" Margin="239,535,0,0" Name="dodajUrzadzenie" VerticalAlignment="Top" Width="150" Click="dodajUrzadzenie_Click" />
         <TextBox Height="35" HorizontalAlignment="Left" Margin="90,393,0,0" Name="DodajAdresTextbox" VerticalAlignment="Top" Width="120" />
-        <ListBox Height="95" HorizontalAlignment="Left" Margin="10,152,0,0" Name="prototypyListBox" VerticalAlignment="Top" Width="93" SelectionChanged="prototypyListBox_SelectionChanged" />
+        <ListBox Height="95" HorizontalAlignment="Left" Margin="10,152,0,0" Name="prototypyListBox" VerticalAlignment="Top" Width="93"  />
         <Label Content="Protokół: " Height="28" HorizontalAlignment="Left" Margin="10,82,0,0" Name="protocolLabel" VerticalAlignment="Top" Width="155" />
         <Label Content="LISTA OPCJI PROTOKOŁU" Height="28" HorizontalAlignment="Left" Margin="18,535,0,0" Name="label10" VerticalAlignment="Top" Width="189" />
         <Button Content="Dodaj urządzenie do systemu" Height="33" HorizontalAlignment="Left" Margin="0,245,0,0" Name="dodajUrzadzenieButton" VerticalAlignment="Top" Width="150" Click="dodajUrzadzenieButton_Click" />
-        <ListBox Height="95" HorizontalAlignment="Left" Margin="149,161,0,0" Name="urzadzeniaListBox" VerticalAlignment="Top" Width="93" />
+        <ListBox Height="95" HorizontalAlignment="Left" Margin="149,161,0,0" Name="urzadzeniaListBox" VerticalAlignment="Top" Width="93" SelectionChanged="urzadzeniaListBox_SelectionChanged" />
         <Label Content="LISTA URZĄDZEŃ W SYSTEMIE" Height="28" HorizontalAlignment="Left" Margin="123,143,0,0" Name="label11" VerticalAlignment="Top" Width="209" />
         <Button Content="Usuń urządzenie z systemu" Height="33" HorizontalAlignment="Left" Margin="149,262,0,0" Name="usunUrzadzenieButton" VerticalAlignment="Top" Width="150" Click="usunUrzadzenieButton_Click_1" />
     </Grid>
