--- a/KontrolerKomunikacyjny/MainWindow.xaml
+++ b/KontrolerKomunikacyjny/MainWindow.xaml
@@ -19,7 +19,7 @@
  
         <Label Content="MASTER" Height="31" HorizontalAlignment="Left" Margin="278,8,0,0" Name="label5" VerticalAlignment="Top" Width="205" />
         <Label Content="PODGLĄD RAMEK" Height="31" HorizontalAlignment="Left" Margin="812,25,0,0" Name="label6" VerticalAlignment="Top" Width="205" />
-        <Frame Height="6" HorizontalAlignment="Left" Margin="7,301,0,0" Name="frame1" VerticalAlignment="Top" Width="441" Background="Black" />
+        <Frame Height="6" HorizontalAlignment="Left" Margin="7,525,0,0" Name="frame1" VerticalAlignment="Top" Width="441" Background="Black" />
         <Frame Height="231" HorizontalAlignment="Left" Margin="442,301,0,0" Name="frame2" VerticalAlignment="Top" Width="6" Background="Black" />
         <Label Content="Błąd" Height="26" HorizontalAlignment="Left" Margin="501,47,0,0" Name="BladMasterAdresLabel" VerticalAlignment="Top" Width="190" />
         <Label Content="Błąd " Height="26" HorizontalAlignment="Left" Margin="501,96,0,0" Name="BladMasterFunkcjaLabel" VerticalAlignment="Top" Width="190" />
@@ -33,27 +33,28 @@
         <Label Height="24" HorizontalAlignment="Left" Margin="300,131,0,0" Name="DaneLabel" VerticalAlignment="Top" Width="175" />
         <ComboBox Height="23" HorizontalAlignment="Left" Margin="138,50,0,0" Name="comboBox1" VerticalAlignment="Top" Width="120" ItemsSource="{Binding}"></ComboBox>
         <Label Content="WYBIERZ PORT" Height="28" HorizontalAlignment="Left" Margin="138,11,0,0" Name="label8" VerticalAlignment="Top" Width="155" />
-        <Label Content="OPCJE: " Height="28" HorizontalAlignment="Left" Margin="12,326,0,0" Name="label1" VerticalAlignment="Top" Width="198" />
         <Label Content="LISTA URZĄDZEŃ W SYSTEMIE" Height="28" HorizontalAlignment="Left" Margin="464,382,0,0" Name="label2" VerticalAlignment="Top" Width="209" />
-        <Label Height="205" HorizontalAlignment="Left" Margin="464,416,0,0" Name="UrzadzeniaWSystemieLabel" VerticalAlignment="Top" Width="329" />
-        <Label Content="LISTA PROTOTYPÓW URZĄDZEŃ" Height="28" HorizontalAlignment="Left" Margin="-9,127,0,0" Name="label9" VerticalAlignment="Top" Width="189" />
-        <Label Height="26" HorizontalAlignment="Left" Margin="12,349,0,0" Name="prototypeLabel" VerticalAlignment="Top" Width="168" />
-        <Label Content="Adres slave" Height="26" HorizontalAlignment="Left" Margin="18,393,0,0" Name="label3" VerticalAlignment="Top" Width="130" />
-        <Label Content="Ilość wejść" Height="26" HorizontalAlignment="Left" Margin="18,442,0,0" Name="label4" VerticalAlignment="Top" Width="130" />
-        <Label Content="Ilość wyjść" Height="26" HorizontalAlignment="Left" Margin="18,491,0,0" Name="label7" VerticalAlignment="Top" Width="130" />
-        <TextBox Height="35" HorizontalAlignment="Left" Margin="90,433,0,0" Name="IloscWejscTextbox" VerticalAlignment="Top" Width="120" />
-        <TextBox Height="35" HorizontalAlignment="Left" Margin="90,482,0,0" Name="IloscWyjscTextbox" VerticalAlignment="Top" Width="120" />
-        <Label Content="Wpisz poprawny adres (1-247)" Height="26" HorizontalAlignment="Left" Margin="228,393,0,0" Name="BladAdresSlaveLabel" VerticalAlignment="Top" Width="190" />
-        <Label Content="Wpisz poprawną ilość wejść (1-32)" Height="26" HorizontalAlignment="Left" Margin="228,442,0,0" Name="BladIloscWejscLabel" VerticalAlignment="Top" Width="190" />
-        <Label Content="Wpisz poprawną ilość wyjść (1-32)" Height="26" HorizontalAlignment="Left" Margin="228,491,0,0" Name="BladIloscWyjscLabel" VerticalAlignment="Top" Width="190" />
-        <Button Content="Dodaj urządzenie do systemu" Height="33" HorizontalAlignment="Left" Margin="239,535,0,0" Name="dodajUrzadzenie" VerticalAlignment="Top" Width="150" Click="dodajUrzadzenie_Click" />
-        <TextBox Height="35" HorizontalAlignment="Left" Margin="90,393,0,0" Name="DodajAdresTextbox" VerticalAlignment="Top" Width="120" />
-        <ListBox Height="95" HorizontalAlignment="Left" Margin="10,152,0,0" Name="prototypyListBox" VerticalAlignment="Top" Width="93"  />
+        <Label Height="205" HorizontalAlignment="Left" Margin="464,402,0,0" Name="UrzadzeniaWSystemieLabel" VerticalAlignment="Top" Width="329" />
+        <Label Content="LISTA PROTOTYPÓW URZĄDZEŃ" Height="28" HorizontalAlignment="Left" Margin="10,327,0,0" Name="label9" VerticalAlignment="Top" Width="189" />
+        <ListBox Height="95" HorizontalAlignment="Left" Margin="10,352,0,0" Name="prototypyListBox" VerticalAlignment="Top" Width="93"  />
         <Label Content="Protokół: " Height="28" HorizontalAlignment="Left" Margin="10,82,0,0" Name="protocolLabel" VerticalAlignment="Top" Width="155" />
-        <Label Content="LISTA OPCJI PROTOKOŁU" Height="28" HorizontalAlignment="Left" Margin="18,535,0,0" Name="label10" VerticalAlignment="Top" Width="189" />
-        <Button Content="Dodaj urządzenie do systemu" Height="33" HorizontalAlignment="Left" Margin="0,245,0,0" Name="dodajUrzadzenieButton" VerticalAlignment="Top" Width="150" Click="dodajUrzadzenieButton_Click" />
-        <ListBox Height="95" HorizontalAlignment="Left" Margin="149,161,0,0" Name="urzadzeniaListBox" VerticalAlignment="Top" Width="93" SelectionChanged="urzadzeniaListBox_SelectionChanged" />
-        <Label Content="LISTA URZĄDZEŃ W SYSTEMIE" Height="28" HorizontalAlignment="Left" Margin="123,143,0,0" Name="label11" VerticalAlignment="Top" Width="209" />
-        <Button Content="Usuń urządzenie z systemu" Height="33" HorizontalAlignment="Left" Margin="149,262,0,0" Name="usunUrzadzenieButton" VerticalAlignment="Top" Width="150" Click="usunUrzadzenieButton_Click_1" />
+        <Label Content="LISTA OPCJI PROTOKOŁU" Height="28" HorizontalAlignment="Left" Margin="7,127,0,0" Name="label10" VerticalAlignment="Top" Width="189" />
+        <Button Content="Dodaj urządzenie do systemu" Height="33" HorizontalAlignment="Left" Margin="7,453,0,0" Name="dodajUrzadzenieButton" VerticalAlignment="Top" Width="150" Click="dodajUrzadzenieButton_Click" />
+        <ListBox Height="95" HorizontalAlignment="Left" Margin="212,352,0,0" Name="urzadzeniaListBox" VerticalAlignment="Top" Width="93" SelectionChanged="urzadzeniaListBox_SelectionChanged" />
+        <Label Content="LISTA URZĄDZEŃ W SYSTEMIE" Height="28" HorizontalAlignment="Left" Margin="212,327,0,0" Name="label11" VerticalAlignment="Top" Width="209" />
+        <Button Content="Usuń urządzenie z systemu" Height="33" HorizontalAlignment="Left" Margin="212,453,0,0" Name="usunUrzadzenieButton" VerticalAlignment="Top" Width="150" Click="usunUrzadzenieButton_Click_1" />
+        <Button Content="Dodaj urządzenie do systemu" Height="33" HorizontalAlignment="Left" Margin="220,538,0,0" Name="dodajUrzadzenie" VerticalAlignment="Top" Width="150" />
+        <Label Content="OPCJE URZĄDZENIA: " Height="28" HorizontalAlignment="Left" Margin="4,538,0,0" Name="label1" VerticalAlignment="Top" Width="198" />
+        <Label Height="26" HorizontalAlignment="Left" Margin="4,561,0,0" Name="prototypeLabel" VerticalAlignment="Top" Width="168" />
+        <Label Content="Adres slave" Height="26" HorizontalAlignment="Left" Margin="10,605,0,0" Name="label3" VerticalAlignment="Top" Width="130" />
+        <Label Content="Ilość wejść" Height="26" HorizontalAlignment="Left" Margin="10,654,0,0" Name="label4" VerticalAlignment="Top" Width="130" />
+        <Label Content="Ilość wyjść" Height="26" HorizontalAlignment="Left" Margin="10,703,0,0" Name="label7" VerticalAlignment="Top" Width="130" Grid.RowSpan="2" />
+        <TextBox Height="35" HorizontalAlignment="Left" Margin="82,645,0,0" Name="IloscWejscTextbox" VerticalAlignment="Top" Width="120" />
+        <TextBox Height="35" HorizontalAlignment="Left" Margin="82,694,0,0" Name="IloscWyjscTextbox" VerticalAlignment="Top" Width="120" Grid.RowSpan="2" />
+        <Label Content="Wpisz poprawny adres (1-247)" Height="26" HorizontalAlignment="Left" Margin="220,605,0,0" Name="BladAdresSlaveLabel" VerticalAlignment="Top" Width="190" />
+        <Label Content="Wpisz poprawną ilość wejść (1-32)" Height="26" HorizontalAlignment="Left" Margin="220,654,0,0" Name="BladIloscWejscLabel" VerticalAlignment="Top" Width="190" />
+        <Label Content="Wpisz poprawną ilość wyjść (1-32)" Height="26" HorizontalAlignment="Left" Margin="220,703,0,0" Name="BladIloscWyjscLabel" VerticalAlignment="Top" Width="190" Grid.RowSpan="2" />
+        <TextBox Height="35" HorizontalAlignment="Left" Margin="82,605,0,0" Name="DodajAdresTextbox" VerticalAlignment="Top" Width="120" />
+        <Frame Background="Black" Height="6" HorizontalAlignment="Left" Margin="7,301,0,0" Name="frame4" VerticalAlignment="Top" Width="441" />
     </Grid>
 </Window>
