--- a/KontrolerKomunikacyjny/MainWindow.xaml
+++ b/KontrolerKomunikacyjny/MainWindow.xaml
@@ -7,34 +7,25 @@
             <RowDefinition Height="662*" />
             <RowDefinition Height="7*" />
         </Grid.RowDefinitions>
+        <Border BorderBrush="Silver" BorderThickness="1" Height="249" HorizontalAlignment="Left" Margin="282,25,0,0" Name="border1" VerticalAlignment="Top" Width="244"></Border>
         <Button Content="Otwórz plik XML" Height="67" HorizontalAlignment="Left" Margin="7,6,0,0" Name="OtworzPrzycisk" VerticalAlignment="Top" Width="117" Click="otworzPrzycisk" />
-        <Button Content="Wyślij" Height="58" HorizontalAlignment="Left" Margin="542,296,0,0" Name="WyslijPrzycisk" VerticalAlignment="Top" Width="120" Click="WyslijPrzycisk_Click" />
-        <TextBox Height="35" HorizontalAlignment="Left" Margin="361,47,0,0" Name="AdresSlaveTextbox" VerticalAlignment="Top" Width="120" />
-        <TextBox Height="35" HorizontalAlignment="Left" Margin="361,84,0,0" Name="FunkcjaTextbox" VerticalAlignment="Top" Width="120" />        <Label Height="410" HorizontalAlignment="Left" Margin="812,50,0,0" Name="ChatEtykieta" VerticalAlignment="Top" Width="221" />
-   <TextBox Height="35" HorizontalAlignment="Left" Margin="361,165,0,0" Name="AdresWeWyTextbox" VerticalAlignment="Top" Width="120" />
-        <Label  Height="26" HorizontalAlignment="Left" Margin="291,165,0,0" Name="AdresWyWeLabel" VerticalAlignment="Top" Width="130" />
+        <TextBox Height="35" HorizontalAlignment="Left" Margin="376,84,0,0" Name="FunkcjaTextbox" VerticalAlignment="Top" Width="120" />        <Label Height="410" HorizontalAlignment="Left" Margin="812,50,0,0" Name="ChatEtykieta" VerticalAlignment="Top" Width="221" />
+   <TextBox Height="35" HorizontalAlignment="Left" Margin="376,165,0,0" Name="AdresWeWyTextbox" VerticalAlignment="Top" Width="120" />
+        <Label  Height="26" HorizontalAlignment="Left" Margin="291,165,0,0" Name="AdresWyWeLabel" VerticalAlignment="Top" Width="130" Content="Adres wyjścia" />
 
-        <Label  Height="26" HorizontalAlignment="Left" Margin="280,84,0,0" Name="FunkcjaLabel" VerticalAlignment="Top" Width="130" />
-        <Label Height="26" HorizontalAlignment="Left" Margin="280,56,0,0" Name="AdresSlaveLabel" VerticalAlignment="Top" Width="130" />
- 
-        <Label Content="MASTER" Height="31" HorizontalAlignment="Left" Margin="278,8,0,0" Name="label5" VerticalAlignment="Top" Width="205" />
+        <Label  Height="26" HorizontalAlignment="Left" Margin="291,84,0,0" Name="FunkcjaLabel" VerticalAlignment="Top" Width="130" Content="Kod funkcji" />
+        <Label Content="MASTER" Height="31" HorizontalAlignment="Left" Margin="280,6,0,0" Name="label5" VerticalAlignment="Top" Width="205" />
         <Label Content="PODGLĄD RAMEK" Height="31" HorizontalAlignment="Left" Margin="812,25,0,0" Name="label6" VerticalAlignment="Top" Width="205" />
         <Frame Height="6" HorizontalAlignment="Left" Margin="7,525,0,0" Name="frame1" VerticalAlignment="Top" Width="441" Background="Black" />
         <Frame Height="231" HorizontalAlignment="Left" Margin="442,301,0,0" Name="frame2" VerticalAlignment="Top" Width="6" Background="Black" />
-        <Label Content="Błąd" Height="26" HorizontalAlignment="Left" Margin="501,47,0,0" Name="BladMasterAdresLabel" VerticalAlignment="Top" Width="190" />
-        <Label Content="Błąd " Height="26" HorizontalAlignment="Left" Margin="501,96,0,0" Name="BladMasterFunkcjaLabel" VerticalAlignment="Top" Width="190" />
-        <Label Content="Błąd" Height="26" HorizontalAlignment="Left" Margin="501,174,0,0" Name="BladMasterAdresWeWyLabel" VerticalAlignment="Top" Width="190" />
         <Frame Background="Black" Height="461" HorizontalAlignment="Right" Margin="0,25,255,0" Name="frame3" VerticalAlignment="Top" Width="7" />
         <Frame Background="Black" Height="295" HorizontalAlignment="Left" Margin="268,12,0,0" Name="frame5" VerticalAlignment="Top" Width="6" />
         <Frame Background="Black" Height="7" HorizontalAlignment="Left" Margin="10,112,0,0" Name="frame6" VerticalAlignment="Top" Width="264" />
-        <TextBox Height="35" HorizontalAlignment="Left" Margin="361,221,0,0" Name="WartoscTextbox" VerticalAlignment="Top" Width="120" />
-        <Label Height="26" HorizontalAlignment="Left" Margin="291,221,0,0" Name="WartoscLabel" VerticalAlignment="Top" Width="130" />
-        <Label Content="Błąd" Height="26" HorizontalAlignment="Left" Margin="501,221,0,0" Name="BladMasterWartoscLabel" VerticalAlignment="Top" Width="190" />
-        <Label Height="24" HorizontalAlignment="Left" Margin="300,131,0,0" Name="DaneLabel" VerticalAlignment="Top" Width="175" />
+        <TextBox Height="35" HorizontalAlignment="Left" Margin="376,221,0,0" Name="WartoscTextbox" VerticalAlignment="Top" Width="120" />
+        <Label Height="26" HorizontalAlignment="Left" Margin="291,221,0,0" Name="WartoscLabel" VerticalAlignment="Top" Width="130" Content="Wartość wyjścia" />
+        <Label Height="24" HorizontalAlignment="Left" Margin="300,131,0,0" Name="DaneLabel" VerticalAlignment="Top" Width="175" Content="DANE" />
         <ComboBox Height="23" HorizontalAlignment="Left" Margin="138,50,0,0" Name="comboBox1" VerticalAlignment="Top" Width="120" ItemsSource="{Binding}"></ComboBox>
         <Label Content="WYBIERZ PORT" Height="28" HorizontalAlignment="Left" Margin="138,11,0,0" Name="label8" VerticalAlignment="Top" Width="155" />
-        <Label Content="LISTA URZĄDZEŃ W SYSTEMIE" Height="28" HorizontalAlignment="Left" Margin="464,382,0,0" Name="label2" VerticalAlignment="Top" Width="209" />
-        <Label Height="205" HorizontalAlignment="Left" Margin="464,402,0,0" Name="UrzadzeniaWSystemieLabel" VerticalAlignment="Top" Width="329" />
         <Label Content="LISTA PROTOTYPÓW URZĄDZEŃ" Height="28" HorizontalAlignment="Left" Margin="10,327,0,0" Name="label9" VerticalAlignment="Top" Width="189" />
         <ListBox Height="95" HorizontalAlignment="Left" Margin="10,352,0,0" Name="prototypyListBox" VerticalAlignment="Top" Width="93"  />
         <Label Content="Protokół: " Height="28" HorizontalAlignment="Left" Margin="10,82,0,0" Name="protocolLabel" VerticalAlignment="Top" Width="155" />
@@ -46,15 +37,9 @@
         <Button Content="Ustaw opcje urządzenia" Height="33" HorizontalAlignment="Left" Margin="235,647,0,0" Name="ustawOpcjeButton" VerticalAlignment="Top" Width="150" Click="ustawOpcjeButton_Click" />
         <Label Content="OPCJE URZĄDZENIA: " Height="28" HorizontalAlignment="Left" Margin="4,538,0,0" Name="label1" VerticalAlignment="Top" Width="198" />
         <Label Height="26" HorizontalAlignment="Left" Margin="4,561,0,0" Name="prototypeLabel" VerticalAlignment="Top" Width="168" />
-        <Label Content="Adres slave" Height="26" HorizontalAlignment="Left" Margin="463,605,0,0" Name="label3" VerticalAlignment="Top" Width="130" />
-        <Label Content="Ilość wejść" Height="26" HorizontalAlignment="Left" Margin="463,654,0,0" Name="label4" VerticalAlignment="Top" Width="130" />
-        <Label Content="Ilość wyjść" Height="26" HorizontalAlignment="Left" Margin="463,703,0,0" Name="label7" VerticalAlignment="Top" Width="130" Grid.RowSpan="2" />
-        <TextBox Height="35" HorizontalAlignment="Left" Margin="535,645,0,0" Name="IloscWejscTextbox" VerticalAlignment="Top" Width="120" />
-        <TextBox Height="35" HorizontalAlignment="Left" Margin="535,694,0,0" Name="IloscWyjscTextbox" VerticalAlignment="Top" Width="120" Grid.RowSpan="2" />
-        <Label Content="Wpisz poprawny adres (1-247)" Height="26" HorizontalAlignment="Left" Margin="673,605,0,0" Name="BladAdresSlaveLabel" VerticalAlignment="Top" Width="190" />
-        <Label Content="Wpisz poprawną ilość wejść (1-32)" Height="26" HorizontalAlignment="Left" Margin="673,654,0,0" Name="BladIloscWejscLabel" VerticalAlignment="Top" Width="190" />
-        <Label Content="Wpisz poprawną ilość wyjść (1-32)" Height="26" HorizontalAlignment="Left" Margin="673,703,0,0" Name="BladIloscWyjscLabel" VerticalAlignment="Top" Width="190" Grid.RowSpan="2" />
-        <TextBox Height="35" HorizontalAlignment="Left" Margin="535,605,0,0" Name="DodajAdresTextbox" VerticalAlignment="Top" Width="120" />
         <Frame Background="Black" Height="6" HorizontalAlignment="Left" Margin="7,301,0,0" Name="frame4" VerticalAlignment="Top" Width="441" />
+        <Label Content="Adres urządzenia" Height="26" HorizontalAlignment="Left" Margin="280,36,0,0" Name="label3" VerticalAlignment="Top" Width="130" />
+        <TextBox Height="35" Margin="376,36,565,0" Name="DodajAdresTextbox" VerticalAlignment="Top" />
+        <Button Content="Wyślij" Height="58" Name="WyslijPrzycisk" Width="120" Margin="542,82,399,583" />
     </Grid>
 </Window>
