--- a/KontrolerKomunikacyjny/MainWindow.xaml
+++ b/KontrolerKomunikacyjny/MainWindow.xaml
@@ -26,18 +26,18 @@
         <Label Content="OPCJE URZĄDZENIA: " Height="28" HorizontalAlignment="Left" Margin="4,538,0,0" Name="label1" VerticalAlignment="Top" Width="198" />
         <Label Height="26" HorizontalAlignment="Left" Margin="4,561,0,0" Name="prototypeLabel" VerticalAlignment="Top" Width="168" />
         <Frame Background="Black" Height="6" HorizontalAlignment="Left" Margin="7,301,0,0" Name="frame4" VerticalAlignment="Top" Width="441" />
-        <Button Content="Wyślij" Height="58" Name="WyslijPrzycisk" Width="120" Margin="561,297,380,368" Click="WyslijPrzycisk_Click" />
+        <Button Content="Wyślij" Height="58" Name="WyslijPrzycisk" Width="120" Margin="561,297,380,368" Click="WyslijPrzycisk_Click" TabIndex="8" />
         <Border BorderBrush="Silver" BorderThickness="1" Height="249" HorizontalAlignment="Left" Margin="478,36,0,0" Name="border1" VerticalAlignment="Top" Width="244" />
-        <TextBox Height="35" HorizontalAlignment="Left" Margin="572,95,0,0" Name="FunkcjaTextbox" VerticalAlignment="Top" Width="120" />
-        <TextBox Height="35" HorizontalAlignment="Left" Margin="572,176,0,0" Name="AdresWyTextbox" VerticalAlignment="Top" Width="120" />
+        <TextBox Height="35" HorizontalAlignment="Left" Margin="572,95,0,0" Name="FunkcjaTextbox" VerticalAlignment="Top" Width="120" TabIndex="5" />
+        <TextBox Height="35" HorizontalAlignment="Left" Margin="572,176,0,0" Name="AdresWyTextbox" VerticalAlignment="Top" Width="120" TabIndex="6" />
         <Label Content="Adres wyjścia" Height="26" HorizontalAlignment="Left" Margin="487,176,0,0" Name="AdresWyLabel" VerticalAlignment="Top" Width="130" />
         <Label Content="Kod funkcji" Height="26" HorizontalAlignment="Left" Margin="487,95,0,0" Name="FunkcjaLabel" VerticalAlignment="Top" Width="130" />
         <Label Content="MASTER" Height="31" HorizontalAlignment="Left" Margin="476,17,0,0" Name="label5" VerticalAlignment="Top" Width="205" />
-        <TextBox Height="35" HorizontalAlignment="Left" Margin="572,232,0,0" Name="WartoscTextbox" VerticalAlignment="Top" Width="120" />
+        <TextBox Height="35" HorizontalAlignment="Left" Margin="572,232,0,0" Name="WartoscTextbox" VerticalAlignment="Top" Width="120" TabIndex="7" />
         <Label Content="Wartość wyjścia" Height="26" HorizontalAlignment="Left" Margin="487,232,0,0" Name="WartoscLabel" VerticalAlignment="Top" Width="130" />
         <Label Content="DANE" Height="24" HorizontalAlignment="Left" Margin="496,142,0,0" Name="DaneLabel" VerticalAlignment="Top" Width="175" />
         <Label Content="Adres urządzenia" Height="26" HorizontalAlignment="Left" Margin="476,47,0,0" Name="label3" VerticalAlignment="Top" Width="130" />
-        <TextBox Height="35" Margin="572,47,369,0" Name="AdresTextbox" VerticalAlignment="Top" />
+        <TextBox Height="35" Margin="572,47,369,0" Name="AdresTextbox" VerticalAlignment="Top" TabIndex="4" />
         <Frame Background="Black" Height="648" HorizontalAlignment="Right" Margin="0,17,612,0" Name="frame7" VerticalAlignment="Top" Width="7" />
         <Frame Background="Black" Height="6" HorizontalAlignment="Left" Margin="8,115,0,0" Name="frame5" VerticalAlignment="Top" Width="441" />
         <Label Content="MASTER" Height="31" HorizontalAlignment="Left" Margin="750,42,0,0" Name="label2" VerticalAlignment="Top" Width="334" />
